# jidra

./: .gitignore  COST_ROI_CALCULATOR.md  CURRENT_STATE.md  DEMO.md  ENTERPRISE_GO_PROOF.md  ENTERPRISE_PROOF.md  ENTERPRISE_PYTHON_PROOF.md  ENTERPRISE_SCALA_PROOF.md  ENTERPRISE_TYPESCRIPT_PROOF.md  EXAMPLES.md  FINDINGS_jidra_vs_codegraph.md  FINDINGS_jidra_vs_codegraph_PYTHON.md  LICENSE  MCP.md  MERGE_SAFETY_REPORT.md  PIVOT_RATIONALE.md  PROJECT_STATUS.md  PR_SUMMARY.md  README.md  ROAD_MAP.md  SCALA_PLAN.md  SCRIPT_SUMMARY.md  VALIDATE_JIDRA_README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  validate_jidra_analysis.py
docs/: MCP_VERIFICATION_RESULTS.md  incremental_reindex_plan.md  quick_test_script.sh  testing_incremental_reindex.md
evals/: agent_eval.py  agent_eval_py.py  agent_eval_ts.py  analyze_session_logs.py  compare_chat.py  eval_chat.py  eval_queries.yaml  validate_jidra_analysis.py
experiments/: enrichment_agent.py  enrichment_judge.py
jidra/: __init__.py  actuator_client.py  cache.py  cli.py  config.yaml  context_builder.py  cost_calculator.py  daemon.py  doc_graph_visualizer.py  doc_store.py  engine.py  exporter.py  extractor.py  filters.py  flow_doc_agent.py  flow_stitcher.py  go_extractor.py  go_filters.py  graph_io.py  graph_rag.py  graph_store.py  graph_validator.py  graph_visualizer.py  llm_client.py  mcp_server.py  models.py  parser.py  proxy.py  py_extractor.py  py_extractor_v2.py  py_filters.py  py_type_provider.py  reindexer.py  ruff.toml  scala_extractor.py  scala_filters.py  selector.py  smithy4j_builder.py  smithy_bridge.py  smithy_extractor.py  (+7 more)
jidra.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scala_sidecar/: Dockerfile  (+1 more)
(+155 files in other folders)
