[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jidra"
version = "0.1.0"
description = "JIDRA (Java Intelligent Diagnostic & Reasoning Agent) minimal CLI baseline"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "tree-sitter>=0.22.0",
  "tree-sitter-java>=0.21.0",
  "tree-sitter-go>=0.21.0",
  "tree-sitter-typescript>=0.23.0",
  "libcst>=0.4.10",
  "pyright>=1.1.330",
  "litellm>=1.82.0",
  "pyyaml>=6.0.0",
  "mcp>=1.27.0",
  "watchdog>=4.0.0",
  "protobuf>=4.25.0",
  "rich>=13.0.0"
]

[project.scripts]
jidra = "jidra.cli:main"

[project.optional-dependencies]
mcp = ["mcp"]
ui = ["fastapi>=0.111.0", "uvicorn[standard]>=0.29.0"]
test = ["pytest>=8.0.0", "ruff>=0.13.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["jidra", "jidra.*"]
